# whiteboard-sib-access

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
automation/: update_repo_remote.sh
debian/: changelog  control  rules
include/: Makefile.in  sib_server.h
rpm/: whiteboard-sib-access.spec
src/: Makefile.am  Makefile.in  main.c  serverthread.c  sib_access.c  sib_controller.c  sib_server.c
